--- a/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.core/src/com/microsoft/azuretools/core/utils/messages.properties
+++ b/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.core/src/com/microsoft/azuretools/core/utils/messages.properties
@@ -6,7 +6,7 @@ dataFileName=data.xml
 dataFileEntry=/resources/data.xml
 preferenceQueMsg=Do you want to help improve future versions of Azure Toolkit for Eclipse?\
 \n\nIf yes, information about your system and how you use this software will be automatically sent to Microsoft without interrupting your work.\
-\nThis information is never used to identify or contact you. <a href=\"http://go.microsoft.com/fwlink/?LinkID=620956">Click here to learn more</a>.\
+\nThis information is never used to identify or contact you. <a href=\"https://privacy.microsoft.com/en-US/">Click here to learn more</a>.\
 \n\n(You can change this setting later in Window > Preferences > Azure).
 preferenceQueTtl=Azure Toolkit for Eclipse
 lnkOpenErrMsg=Error occurred while opening link in default browser.
@@ -25,7 +25,7 @@ hdinshgtPrefVal=hdinsight-preference-value
 preferenceMsg=Help improve future versions of Azure Toolkit for Eclipse.
 preferenceLinkMsg=This will enable information about your system and how you use this software\
 \n to be automatically sent to Microsoft without interrupting your work.\
-\nThis information is never used to identify or contact you. <a href=\"http://go.microsoft.com/fwlink/?LinkID=620956">Click here to learn more</a>.
+\nThis information is never used to identify or contact you. <a href=\"https://privacy.microsoft.com/en-US/">Click here to learn more</a>.
 cmpntFileName=componentsets.xml
 oldCmpntFileEntry=/resources/componentsets_old.xml
 cmpntFileEntry=/resources/componentsets.xml
