--- a/PluginsAndFeatures/azure-toolkit-for-intellij/src/main/resources/com/microsoft/intellij/ui/messages/messages.properties
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/src/main/resources/com/microsoft/intellij/ui/messages/messages.properties
@@ -1262,10 +1262,10 @@ instID=installation-id
 prefVal=preference-value
 preferenceLinkMsg=<html>This will enable information about your system and how you use this software\
 <br> to be automatically sent to Microsoft without interrupting your work.\
-<br>This information is never used to identify or contact you. <a href=\"http://go.microsoft.com/fwlink/?LinkID=620956\">Click here to learn more</a>.</html>
+<br>This information is never used to identify or contact you. <a href=\"https://privacy.microsoft.com/en-US/\">Click here to learn more</a>.</html>
 preferenceQueMsg=<html>Do you want to help improve future versions of Azure Toolkit for IntelliJ?\
 <br><br>If yes, information about your system and how you use this software will be automatically sent to Microsoft without interrupting your work.\
-<br>This information is never used to identify or contact you. <a href=\"http://go.microsoft.com/fwlink/?LinkID=620956\">Click here to learn more</a>.\
+<br>This information is never used to identify or contact you. <a href=\"https://privacy.microsoft.com/en-US/\">Click here to learn more</a>.\
 <br><br>(You can change this setting later in Settings > Microsoft Tools > Azure).</html>
 preferenceQueTtl=Azure Toolkit for IntelliJ
 telAgrEvtName=Telemetry Agreement
@@ -1542,4 +1542,4 @@ springCloud.app.name.validate.invalid=The name is invalid. It can contain only l
 settings.root.message=Expand the tree to edit preferences for a specific feature.
 settings.root.telemetry.notice=<html>This will enable information about your system and how you use this software\
 <br> to be automatically sent to Microsoft without interrupting your work.\
-<br>This information is never used to identify or contact you. <a href=\"http://go.microsoft.com/fwlink/?LinkID=620956\">Click here to learn more</a>.</html>
+<br>This information is never used to identify or contact you. <a href=\"https://privacy.microsoft.com/en-US/\">Click here to learn more</a>.</html>
